[helpers/killer] Use <p> instead of <para>

Summary:
para works fine for English, but seems to break in translations.

BUG: 363750
FIXED-IN: 5.9

Test Plan: Renders correctly in English. Translations not tested.

Reviewers: #kwin, #plasma

Subscribers: plasma-devel, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D3227